# tedr

./: Cargo.toml  LICENSE
crates/tservice/: Cargo.toml
crates/tservice/src/: conn.rs  main.rs
driver/: Cargo.toml  Makefile.toml  build.rs  tedr.inx
driver/src/: entry.rs  global.rs  lib.rs
scripts/: build-service.ps1  install-service.ps1
