[workspace]
resolver = "3"
exclude = ["driver"]
members = ["crates/tservice"]

[workspace.package]
edition = "2024"

[workspace.dependencies]
windows-services = "0.26.1"
windows = "0.62.2"
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = { version = "0.7.17" }
tracing-appender = "0.2"
tracing = "0.1"
tracing-subscriber = "0.3"
